# rust-actix-crud

./: .env  .env.sample  Cargo.toml  readme.md
migrations/2022-09-12-141416_create_users/: up.sql
migrations/2022-09-25-230834_create_users/: up.sql
src/: error.rs  handlers.rs  main.rs  schema.rs
src/auth/: action.rs  auth.rs  google.rs  mod.rs
src/config/: app.rs  cors.rs  db.rs  mod.rs  types.rs
src/extractors/: claims.rs
src/google/: action.rs  mod.rs  routes.rs
src/services/: account_service.rs
src/session/: routes.rs
src/tweets/: action.rs  mod.rs  routes.rs
src/users/: action.rs  mod.rs  models.rs  routes.rs  token.rs  user.rs
src/utils/: token_utils.rs
