[package]
name = "rust-actix-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.123"
futures = "0.3.12"
failure = "0.1.8"
jsonwebtoken = "7.2.0"
bcrypt = "0.10.1"
log = "0.4.14"
actix-cors = "0.5.4"
actix-rt = "1.1.1"
uuid = { version = "0.8.2", features = ["v4"]}
actix-service = "1.0.6"
