[package]
name = "rust-actix-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8.0"
actix-cors = "0.6.2"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
derive_more = "0.99.17"
env_logger = "0.9.0"
awc = { version = "3.0.1", features = ["rustls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1.1"